# ModelTransformer

./: CMakeLists.txt  README.md  main.cpp
lib/Debug/: assimp-vc143-mtd.exp  unit.exp
lib/Release/: assimp-vc143-mt.exp  unit.exp
model_loader/: model_loader.cpp  model_loader.h  plane_coordinate_transform.cpp  plane_coordinate_transform.h  units_define.cpp  units_define.h
point_cloud/: BinaryMesh.cpp  BinaryMesh.h  point_cloud_loader.cpp  point_cloud_loader.h
